--- a/src/config/i18n/en.json
+++ b/src/config/i18n/en.json
@@ -246,12 +246,16 @@
   },
   "PackageCategory": {
     "agriculture": "Agriculture",
+    "airplanes": "Airplanes",
     "airports": "Airports",
     "audio": "Audio",
     "automata": "Automata",
+    "bikes": "Bikes",
     "blockers": "Maxis Blockers",
     "bugfixes": "Bugfixes",
+    "bus": "Bus",
     "cam": "CAM",
+    "canals": "Canals",
     "cheats": "Cheats",
     "civics": "Civics",
     "commercial": "Commercial",
@@ -265,6 +269,10 @@
     "dll": "DLL Mods",
     "education": "$t(PackageCategory:civics) (Education)",
     "energy": "$t(PackageCategory:utilities) (Energy)",
+    "ferry": "Ferry",
+    "fillers": "Fillers",
+    "flora": "Flora",
+    "freight-rail": "Freight rail",
     "gameplay": "Gameplay Mods",
     "government": "$t(PackageCategory:civics) (Governement)",
     "graphics": "Graphical Mods",
@@ -275,23 +283,37 @@
     "industrial-im": "$t(PackageCategory:industrial) (I-M)",
     "irm": "IRM",
     "landmarks": "Landmarks",
+    "marina": "Marina",
     "mmps": "MMPs",
     "mods": "Mods",
+    "monorail": "Monorail",
     "nam": "NAM",
     "ordinances": "Ordinances",
     "overrides": "Overrides",
+    "parkings": "Parkings",
     "parks": "Parks",
+    "passenger-rail": "Passenger rail",
+    "pedestrians": "Pedestrians",
     "props": "Props",
+    "rail": "Railway",
     "religion": "$t(PackageCategory:civics) (Religion)",
     "residential": "Residential",
     "residential-r1": "$t(PackageCategory:residential) (R$)",
     "residential-r2": "$t(PackageCategory:residential) (R$$)",
     "residential-r3": "$t(PackageCategory:residential) (R$$$)",
-    "rtmt": "RTMT",
+    "rewards": "Rewards",
     "safety": "$t(PackageCategory:civics) (Safety)",
+    "seaports": "Seaports",
+    "ships": "Ships",
+    "sidewalks": "Sidewalks",
     "spam": "SPAM",
+    "streetlights": "Streetlights",
+    "subway": "Subway",
+    "terminals": "Terminals",
     "textures": "Textures",
+    "tram": "Tramway",
     "transport": "Transport",
+    "trains": "Trains",
     "utilities": "Utilities",
     "waste": "$t(PackageCategory:utilities) (Waste)",
     "water": "$t(PackageCategory:utilities) (Water)",
