--- a/src/config/i18n/en.json
+++ b/src/config/i18n/en.json
@@ -247,10 +247,10 @@
     "agriculture": "Agriculture",
     "airplanes": "Airplanes",
     "airports": "Airports",
-    "audio": "Audio",
     "automata": "Automata",
     "bikes": "Bikes",
-    "blockers": "Maxis Blockers",
+    "blockers": "Blockers",
+    "bridges": "Bridges",
     "bugfixes": "Bugfixes",
     "bus": "Bus",
     "cam": "CAM",
@@ -258,29 +258,28 @@
     "cheats": "Cheats",
     "civics": "Civics",
     "commercial": "Commercial",
-    "commercial-co2": "$t(PackageCategory:commercial) (CO$$)",
-    "commercial-co3": "$t(PackageCategory:commercial) (CO$$$)",
-    "commercial-cs1": "$t(PackageCategory:commercial) (CS$)",
-    "commercial-cs2": "$t(PackageCategory:commercial) (CS$$)",
-    "commercial-cs3": "$t(PackageCategory:commercial) (CS$$$)",
-    "custom": "Custom",
+    "co$$": "CO$$",
+    "co$$$": "CO$$$",
+    "cs$": "CS$",
+    "cs$$": "CS$$",
+    "cs$$$": "CS$$$",
     "dependencies": "Dependencies",
-    "dll": "DLL Mods",
-    "education": "$t(PackageCategory:civics) (Education)",
-    "energy": "$t(PackageCategory:utilities) (Energy)",
+    "diagonal": "Diagonal",
+    "dll": "DLLs",
+    "education": "Education",
     "ferry": "Ferry",
     "fillers": "Fillers",
     "flora": "Flora",
-    "freight-rail": "Freight rail",
-    "gameplay": "Gameplay Mods",
-    "government": "$t(PackageCategory:civics) (Governement)",
-    "graphics": "Graphical Mods",
-    "health": "$t(PackageCategory:civics) (Healthcare)",
-    "industrial": "Industrial",
-    "industrial-id": "$t(PackageCategory:industrial) (I-D)",
-    "industrial-iht": "$t(PackageCategory:industrial) (I-HT)",
-    "industrial-im": "$t(PackageCategory:industrial) (I-M)",
+    "freight": "Freight stations",
+    "gameplay": "Gameplay",
+    "government": "Government",
+    "graphics": "Graphics",
+    "health": "Healthcare",
+    "industry": "Industry",
     "irm": "IRM",
+    "i-d": "I-D",
+    "i-ht": "I-HT",
+    "i-m": "I-M",
     "landmarks": "Landmarks",
     "marina": "Marina",
     "mmps": "MMPs",
@@ -291,20 +290,23 @@
     "overrides": "Overrides",
     "parkings": "Parkings",
     "parks": "Parks",
-    "passenger-rail": "Passenger rail",
+    "passengers": "Passenger stations",
     "pedestrians": "Pedestrians",
+    "police": "Police",
+    "power": "Energy",
     "props": "Props",
     "rail": "Railway",
-    "religion": "$t(PackageCategory:civics) (Religion)",
+    "religion": "Religion",
     "residential": "Residential",
-    "residential-r1": "$t(PackageCategory:residential) (R$)",
-    "residential-r2": "$t(PackageCategory:residential) (R$$)",
-    "residential-r3": "$t(PackageCategory:residential) (R$$$)",
+    "r$": "R$",
+    "r$$": "R$$",
+    "r$$$": "R$$$",
     "rewards": "Rewards",
-    "safety": "$t(PackageCategory:civics) (Safety)",
     "seaports": "Seaports",
     "ships": "Ships",
     "sidewalks": "Sidewalks",
+    "sims": "Sims",
+    "sounds": "Audio",
     "spam": "SPAM",
     "streetlights": "Streetlights",
     "subway": "Subway",
@@ -312,10 +314,10 @@
     "textures": "Textures",
     "tram": "Tramway",
     "transport": "Transport",
-    "trains": "Trains",
+    "tunnels": "Tunnels",
     "utilities": "Utilities",
-    "waste": "$t(PackageCategory:utilities) (Waste)",
-    "water": "$t(PackageCategory:utilities) (Water)",
+    "waste": "Waste",
+    "water": "Water",
     "waterfront": "Waterfront"
   },
   "PackageList": {
@@ -373,6 +375,7 @@
   },
   "PackageViewLots": {
     "bulldoze": "Bulldoze cost",
+    "category": "Category",
     "cost": "Plop cost",
     "demand": "Occupants",
     "excludeLot": "Exclude lot",
