--- a/src/config/i18n/en.json
+++ b/src/config/i18n/en.json
@@ -298,10 +298,11 @@
     "rail": "Railway",
     "religion": "Religion",
     "residential": "Residential",
+    "rewards": "Rewards",
+    "roundabouts": "Roundabouts",
     "r$": "R$",
     "r$$": "R$$",
     "r$$$": "R$$$",
-    "rewards": "Rewards",
     "seaports": "Seaports",
     "ships": "Ships",
     "sidewalks": "Sidewalks",
@@ -385,11 +386,14 @@
     "pollution": "Air pollution",
     "power": "Energy consumption",
     "powerProduction": "Energy production",
+    "requirements": "Requirements",
     "size": "Size",
     "stage": "Growth stage",
+    "tgi": "TGI",
     "water": "Water consumption",
     "waterPollution": "Water pollution",
-    "waterProduction": "Water production"
+    "waterProduction": "Water production",
+    "yimby": "YIMBY"
   },
   "PackageViewSummary": {
     "authors": "Authors",
