--- a/src/config/i18n/en.json
+++ b/src/config/i18n/en.json
@@ -414,7 +414,9 @@
     "options": "Open options"
   },
   "PackageViewFiles": {
-    "openFile": "Open file location"
+    "hideContents": "Hide contents",
+    "openFileLocation": "Open file location",
+    "showContents": "Show contents"
   },
   "PackageViewLots": {
     "bulldoze": "Bulldoze cost",
